<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="viewModel"
            type="com.magic.upcoming.games.viewmodel.game.GameMainViewModel" />
    </data>

    <RelativeLayout
        android:id="@+id/constraint_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorBackground"
        tools:context="com.magic.upcoming.games.fragment.GameMainFragment">

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/search_cardView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_small"
            android:layout_marginTop="@dimen/margin_small"
            android:layout_marginEnd="@dimen/margin_small"
            android:layout_alignParentTop="true"
            app:cardElevation="4dp"
            app:contentPadding="4dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <com.magic.upcoming.games.view.FTextView
                    android:id="@+id/search_textView"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_weight="1"
                    android:drawableStart="@drawable/ic_search"
                    android:drawablePadding="16dp"
                    android:drawableTint="?attr/colorOnBackground"
                    android:onClick="@{() -> viewModel.search()}"
                    android:text="@string/search_all_games"
                    android:textAppearance="@style/TextAppearance.AppCompat.Subhead"
                    android:textColor="?attr/colorOnBackgroundVeryHighContrast" />

                <ImageButton
                    android:id="@+id/favorite_imageButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="end"
                    android:layout_marginEnd="@dimen/margin_extra_small"
                    android:background="?attr/selectableItemBackgroundBorderless"
                    android:contentDescription="@string/favorites"
                    android:onClick="@{() -> viewModel.favorite()}"
                    android:padding="4dp"
                    android:src="@drawable/ic_star"
                    android:tint="?attr/colorOnBackground" />

                <ImageButton
                    android:id="@+id/filter_imageButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="end"
                    android:background="?attr/selectableItemBackgroundBorderless"
                    android:contentDescription="@string/filter"
                    android:onClick="@{() -> viewModel.filter()}"
                    android:padding="4dp"
                    android:src="@drawable/ic_filter"
                    android:tint="?attr/colorOnBackground" />

            </LinearLayout>

        </com.google.android.material.card.MaterialCardView>

        <com.scwang.smart.refresh.layout.SmartRefreshLayout
            android:id="@+id/refreshLayout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@android:color/white"
            android:layout_below="@id/search_cardView"
            android:layout_above="@id/bottom_horizontal_line_view"
            app:srlAccentColor="@android:color/white"
            app:srlEnableHeaderTranslationContent="false"
            app:srlEnableLoadMore="true"
            app:srlPrimaryColor="@color/colorPrimary">

            <com.scwang.smart.refresh.header.MaterialHeader
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/game_recyclerView"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_marginTop="@dimen/margin_extra_extra_small"
                android:background="@color/colorBackground"
                android:clipToPadding="false"
                android:overScrollMode="never"
                android:padding="6dp"
                android:scrollbars="vertical"
                app:layoutManager="androidx.recyclerview.widget.GridLayoutManager" />

            <com.scwang.smart.refresh.footer.ClassicsFooter
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:srlAccentColor="#888"
                app:srlClassicsSpinnerStyle="Translate"
                app:srlDrawableProgress="@drawable/ic_progress" />
        </com.scwang.smart.refresh.layout.SmartRefreshLayout>

        <TextView
            android:id="@+id/empty_textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:drawableTop="@drawable/empty_list"
            android:drawablePadding="@dimen/margin_normal"
            android:text="@string/no_games_match_filter_options"
            android:visibility="gone"
            android:layout_centerInParent="true"/>

        <ImageView
            android:id="@+id/game_cover_imageView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/game_cover"
            android:layout_centerInParent="true"
            android:visibility="visible"/>


        <androidx.core.widget.ContentLoadingProgressBar
            android:id="@+id/indeterminate_progressBar"
            style="?android:attr/progressBarStyleLarge"
            android:layout_width="96dp"
            android:layout_height="96dp"
            android:layout_centerInParent="true"
            android:visibility="gone"/>

        <ProgressBar
            android:id="@+id/determinate_progressBar"
            style="?android:attr/progressBarStyleHorizontal"
            android:layout_width="140dp"
            android:layout_height="wrap_content"
            android:visibility="gone"
            android:layout_centerInParent="true"/>

        <TextView
            android:id="@+id/updating_textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/margin_small"
            android:gravity="center"
            android:text="@string/updating_game_database"
            android:textAppearance="@style/TextAppearance.AppCompat.Subhead"
            android:layout_centerInParent="true"
            app:layout_constraintVertical_chainStyle="packed"
            android:visibility="gone"/>

        <View
            android:id="@+id/bottom_horizontal_line_view"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:alpha="@dimen/bottom_horizontal_bar_alpha"
            android:background="?attr/colorOnBackgroundMediumContrast"
            android:layout_alignParentBottom="true" />

    </RelativeLayout>
</layout>