<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <import type="android.view.View" />

        <import type="android.text.TextUtils" />

        <variable
            name="review"
            type="com.magic.upcoming.games.model.review.ReviewModel" />

        <variable
            name="viewModel"
            type="com.magic.upcoming.games.viewmodel.review.ReviewDetailViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageButton
            android:id="@+id/up_navigation_imageButton"
            android:layout_width="wrap_content"
            android:layout_height="48dp"
            android:layout_marginStart="@dimen/margin_normal"
            android:layout_marginTop="@dimen/margin_extra_small"
            android:layout_marginBottom="@dimen/margin_extra_small"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:contentDescription="@string/nav_app_bar_navigate_up_description"
            android:onClick="@{() -> viewModel.back()}"
            android:src="@drawable/ic_left_arrow"
            android:tint="?attr/colorOnBackground"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageButton
            android:id="@+id/review_link_imageButton"
            android:layout_width="wrap_content"
            android:layout_height="48dp"
            android:layout_marginTop="@dimen/margin_extra_small"
            android:layout_marginEnd="@dimen/margin_normal"
            android:layout_marginBottom="@dimen/margin_extra_small"
            android:background="?selectableItemBackgroundBorderless"
            android:contentDescription="@string/web_link"
            android:onClick="@{() -> viewModel.onViewReviewLink()}"
            android:padding="@dimen/margin_extra_small"
            android:src="@drawable/ic_link"
            android:tint="?attr/colorOnBackground"
            app:layout_constraintBottom_toBottomOf="@id/up_navigation_imageButton"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="@id/up_navigation_imageButton" />

        <com.magic.upcoming.games.view.NestedScrollingParentScrollView
            android:id="@+id/scrollView"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:overScrollMode="never"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@id/up_navigation_imageButton">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="@dimen/margin_normal">

                <TextView
                    android:id="@+id/game_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="@dimen/margin_normal"
                    android:text="@{review.game.gameName}"
                    android:textAppearance="@style/TextAppearance.AppCompat.Headline"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toRightOf="parent"
                    tools:text="Halo Infinite" />

                <com.google.android.material.card.MaterialCardView
                    android:id="@+id/details_cardView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/margin_normal"
                    app:cardBackgroundColor="?attr/colorBackgroundVariant"
                    app:layout_constraintTop_toBottomOf="@id/game_name">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_margin="@dimen/margin_normal"
                        android:orientation="vertical">

                        <TextView
                            android:id="@+id/detail_header_textView"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/details"
                            android:textAppearance="@style/TextAppearance.AppCompat.Headline"
                            android:textSize="18sp" />

                        <com.idlestar.ratingstar.RatingStarView
                            android:id="@+id/rating_star"
                            app:rsv_cornerRadius="4dp"
                            app:rsv_starMargin="5dp"
                            app:rsv_strokeWidth="1px"
                            app:rsv_strokeColor="#457DD7"
                            app:rsv_starForegroundColor="#DB6958"
                            app:rsv_starBackgroundColor="#757575"
                            app:rsv_starNum="5"
                            app:rsv_onlyHalfStar="true"
                            app:rsv_enableSelectRating="false"
                            app:rsv_starThickness="0.7"
                            app:rsv_drawStrokeForEmptyStar="false"
                            app:rsv_drawStrokeForHalfStar="true"
                            android:layout_width="wrap_content"
                            android:layout_height="20dp"
                            android:layout_marginTop="@dimen/margin_normal"/>

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:orientation="horizontal"
                            android:layout_marginTop="@dimen/dp_10">

                            <TextView
                                android:id="@+id/reviewer"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text='@{"By " + review.reviewer + "  -  "}'
                                android:textSize="13sp"
                                tools:text="By MagicHua - " />

                            <TextView
                                android:id="@+id/release_date_textView"
                                formatPublishDate="@{review.publishDate}"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:textSize="13sp"
                                tools:text="September 19, 2020" />

                        </LinearLayout>

                        <com.google.android.flexbox.FlexboxLayout
                            android:id="@+id/platform_flexboxLayout"
                            app:flexWrap="wrap"
                            app:flexDirection="row"
                            android:layout_marginTop="@dimen/dp_10"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"/>

                    </LinearLayout>

                </com.google.android.material.card.MaterialCardView>

                <com.google.android.material.card.MaterialCardView
                    android:id="@+id/summary_cardView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/margin_normal"
                    android:visibility="@{review.deck == null ? View.GONE : View.VISIBLE}"
                    app:cardBackgroundColor="?attr/colorBackgroundVariant"
                    app:layout_constraintTop_toBottomOf="@id/details_cardView">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_margin="@dimen/margin_normal"
                        android:orientation="vertical">

                        <TextView
                            android:id="@+id/summary_header_textView"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/summary"
                            android:textAppearance="@style/TextAppearance.AppCompat.Headline"
                            android:textSize="18sp" />

                        <TextView
                            android:id="@+id/summary_value_textView"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="@dimen/margin_normal"
                            android:text="@{review.deck}"
                            android:textSize="15sp"
                            tools:text="This is the summary" />

                    </LinearLayout>

                </com.google.android.material.card.MaterialCardView>

                <com.google.android.material.card.MaterialCardView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/margin_normal"
                    android:visibility="@{TextUtils.isEmpty(review.description) ? View.GONE : View.VISIBLE}"
                    app:cardBackgroundColor="?attr/colorBackgroundVariant"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/summary_cardView">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_margin="@dimen/margin_normal"
                        android:orientation="vertical">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/description"
                            android:textAppearance="@style/TextAppearance.AppCompat.Headline"
                            android:textSize="18sp" />

                        <TextView
                            android:id="@+id/richtext"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="@dimen/margin_normal"
                            android:textSize="14sp" />
                    </LinearLayout>

                </com.google.android.material.card.MaterialCardView>

            </androidx.constraintlayout.widget.ConstraintLayout>

        </com.magic.upcoming.games.view.NestedScrollingParentScrollView>


    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>